Got rid of Guava lib: java 8 has its features builtin