@@ -29,8 +29,6 @@
 
 package cc.arduino.view.preferences;
 
-import com.google.common.base.Joiner;
-import com.google.common.collect.FluentIterable;
 import processing.app.Base;
 
 import java.awt.*;
@@ -39,6 +37,7 @@ import java.awt.event.ActionListener;
 import java.awt.event.WindowEvent;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 import static processing.app.I18n.tr;
 
@@ -174,17 +173,17 @@ public class AdditionalBoardsManagerURLTextArea extends javax.swing.JDialog {
 
   public void setText(String text) {
     Collection<String> urls = splitAndTrim(text, ",");
-    additionalBoardsManagerURLs.setText(Joiner.on("\n").skipNulls().join(urls));
+    additionalBoardsManagerURLs.setText(urls.stream().filter(s -> s != null).collect(Collectors.joining("\n")));
   }
 
   private Collection<String> splitAndTrim(String text, String separator) {
     Collection<String> urls = Arrays.asList(text.split(separator));
-    return FluentIterable.from(urls).transform(String::trim).filter(url -> !url.isEmpty()).toList();
+    return urls.stream().map(String::trim).filter(url -> !url.isEmpty()).collect(Collectors.toList());
   }
 
   public String getText() {
     Collection<String> urls = splitAndTrim(additionalBoardsManagerURLs.getText(), "\n");
-    return Joiner.on(",").skipNulls().join(urls);
+    return urls.stream().filter(s -> s != null).collect(Collectors.joining(","));
   }
 
   // Variables declaration - do not modify//GEN-BEGIN:variables
